[package]
name = "phpass-wasm"
version = "0.1.0"
authors = ["Alex Brufsky <alex@spacinsider.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = "1.0.214"
serde-wasm-bindgen = "0.6.5"
base64 = "^0.22"
md5 = "0.7.0"
getrandom = {version = "0.2.15", features = ["js"]}
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
